tests/ui/feature-gates/feature-gate-lifetime-capture-rules-2024.stderr
error[E0700]: hidden type for `impl Sized` captures lifetime that does not appear in bounds
  --> $DIR/feature-gate-lifetime-capture-rules-2024.rs:2:5
   |
LL | fn foo(x: &Vec<i32>) -> impl Sized {
   |           ---------     ---------- opaque type defined here
   |           |
   |           hidden type `&Vec<i32>` captures the anonymous lifetime defined here
LL |     x
   |     ^
   |
help: add a `use<...>` bound to explicitly capture `'_`
   |
LL | fn foo(x: &Vec<i32>) -> impl Sized + use<'_> {
   |                                    +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0700`.
